# generator/acls.go
@@ -38,7 +38,7 @@ func (v *v1api) getACLPaths() []*apiPath {
 					tags,
 					"GetACLPolicy",
 					nil,
-					appendParams(defaultQueryOpts, &policyNameParam),
+					appendParams(defaultQueryOpts, &aclPolicyNameParam),
 					newResponseConfig(200,
 						objectSchema,
 						api.ACLPolicy{},
@@ -51,9 +51,9 @@ func (v *v1api) getACLPaths() []*apiPath {
 					tags,
 					"PostACLPolicy",
 					newRequestBody(objectSchema, api.ACLPolicy{}),
-					appendParams(defaultWriteOpts, &policyNameParam),
+					appendParams(defaultWriteOpts, &aclPolicyNameParam),
 					newResponseConfig(200,
-						objectSchema,
+						nilSchema,
 						nil,
 						defaultWriteMeta,
 						"PostACLPolicyResponse",
@@ -64,9 +64,9 @@ func (v *v1api) getACLPaths() []*apiPath {
 					tags,
 					"DeleteACLPolicy",
 					nil,
-					appendParams(defaultWriteOpts, &policyNameParam),
+					appendParams(defaultWriteOpts, &aclPolicyNameParam),
 					newResponseConfig(200,
-						objectSchema,
+						nilSchema,
 						nil,
 						defaultWriteMeta,
 						"DeleteACLPolicyResponse",
@@ -150,15 +150,13 @@ func (v *v1api) getACLPaths() []*apiPath {
 				),
 			},
 		},
-		// NOTE: changed to from /v1/acl/token to /v1/acl/token/self
-		//s.mux.HandleFunc("/v1/acl/token/self", s.wrap(s.ACLTokenSpecificRequest))
+		//s.mux.HandleFunc("/v1/acl/token", s.wrap(s.ACLTokenSpecificRequest))
 		{
-			Template: "/acl/token/self",
+			Template: "/acl/token",
 			Operations: []*operation{
 				newOperation(http.MethodGet,
 					httpServer.ACLTokenSpecificRequest,
 					tags,
-					// unsure about the self....
 					"GetACLTokenSelf",
 					nil,
 					defaultQueryOpts,
@@ -208,7 +206,7 @@ func (v *v1api) getACLPaths() []*apiPath {
 					nil,
 					appendParams(defaultWriteOpts, &tokenAccessorParam),
 					newResponseConfig(200,
-						objectSchema,
+						nilSchema,
 						nil,
 						defaultWriteMeta,
 						"DeleteACLTokenResponse",
